// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`npm icon render custom class 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-npm lucide-Npm custom-class"
    aria-hidden="true"
  >
    <path
      d="M2 2V22H22V2H2ZM18.6469 18.6484H15.2938V8.70469H11.9406V18.6484H5.35156V5.35312H18.6469V18.6484Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;

exports[`npm icon render default 1`] = `

<div>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewbox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="lucide lucide-npm lucide-Npm"
    aria-hidden="true"
  >
    <path
      d="M2 2V22H22V2H2ZM18.6469 18.6484H15.2938V8.70469H11.9406V18.6484H5.35156V5.35312H18.6469V18.6484Z"
      fill="currentColor"
      stroke-width="0"
    >
    </path>
  </svg>
</div>

`;
